@@ -30,6 +30,8 @@
 /**
  * Implements the P<SUP>2</SUP> algorithm, which calculates quantile values
  * without storing the observations.
+ *
+ * @ingroup Statistics
  */
 class SIM_API cPSquare : public cDensityEstBase
 {
