@@ -1,6 +1,9 @@
 2001-07-19 Andras Varga
 
-	* cdensity.h chist.h cksplit.h cpsquare.h cqueue.h cstat.h ctopo.h
+        * added index.h which defines groups for the documentation; updated
+        a lot of classes with @ingroup directives.
+
+       	* cdensity.h chist.h cksplit.h cpsquare.h cqueue.h cstat.h ctopo.h
         cvarhist.h chead.h ctypes.h cwatch.h: added/cleaned up DOC++ comments 
 
 2001-07-15 Andras Varga
